--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,97 @@
-.App {
+* {
+  margin:0;
+  padding:0;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  background-color:olive;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+#root {
+  width:50%;
+  padding:100px;
+}
+
+ul#list {
+  list-style: none;
+  text-transform: capitalize;
+
+}
+
+#list li {
+  background-color: white;
+  width:100%;
+  padding: 15px 0;
+  border-bottom: 1px solid grey;
+  text-indent: 15px;
+}
+
+form {
+  width:100%;
+  background-color: lightgrey;
+  margin:10px 0;
+  padding:15px 0;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+input {
+  padding: 5px 10px;
+  margin-right:5px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+li span {
+  float:right;
+  margin-right:15px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+li input {
+  font-size: 50px;
+  -ms-transform: scale(1.5); /* IE */
+  -moz-transform: scale(1.5); /* FF */
+  -webkit-transform: scale(1.5); /* Safari and Chrome */
+  -o-transform: scale(1.5); /* Opera */
+  transform: scale(1.5);
+  padding: 7px;
+  margin-left: 5px;
+}
+
+p {
+  text-align: center;
+}
+
+div#navContainer {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-evenly;
+}
+
+ul#navigation {
+  margin-bottom: 20px;
+  width:100%;
+}
+
+#navigation li {
+  display: inline;
+
+  margin-right: 10px;
+}
+
+#navigation li a {
+  border: 1px solid white;
+  border-bottom: none;
   color: white;
+  text-decoration: none;
+  padding: 15px;
 }
 
-.App-link {
-  color: #61dafb;
+#navigation li a.selected {
+  background-color: white;
+  color: black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#todoListInfo {
+  color:white;
+  width:20%;
 }
